tests/compiler/typecheck/import_4/import_4.kk
// error: cannot import private symbol
import "../import_1" { spam }
